# Multi-Modal-Research-Assistant

./: .env_example  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
data2/: chat_history.db-shm  chat_history.db-wal
src/ai_component/: config.py  llm.py
src/ai_component/core/: prompts.py
src/ai_component/graph/: graph.py  node.py  state.py
src/ai_component/graph/utils/: state.py
src/ai_component/modules/RAG/: vector_store.py
src/ai_component/modules/STT/: speechTotext.py
src/ai_component/modules/audio/: speechTotext.py
src/ai_component/modules/image/: image_to_text.py
src/ai_component/tools/: vector_seach_tool.py
src/ai_component/tools/mcp_tools/: browser_use_tool.py  web_search_tool.py
