[project]
name = "multi-modal-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv-paper-mcp>=0.1.2",
    "browser-use>=0.7.0",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pymupdf>=1.25.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "unstructured>=0.18.14",
]
