[project]
name = "multi-modal-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "arxiv-paper-mcp>=0.1.2",
    "assemblyai>=0.43.1",
    "audio-recorder-streamlit>=0.0.10",
    "browser-use>=0.7.0",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.25.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "unstructured>=0.18.14",
    "uvicorn>=0.35.0",
]
